# opal

./: .env  .gitignore  .gitmodules  README.md  compute_visual_complexity.py  create_opal_tables.sh  docker-compose.yml  ignore_mapping.yaml  pyproject.toml  requirements.txt  sample.tar.bz2  start_docker.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build-test.yml  pipeline-test.yml  pipeline-test2.yml  python-package.yml
app/: Main.py
app/pages/: 1_FAQ.py
data/: make_df.py
data_public/: make_df.py  pack_replays.py
journal/opal/: localbibliography.bib  main.out  main.run.xml  main.tex
models/: README.md  analysis.ipynb  analysis_medium.ipynb  analysis_new_tiny.ipynb  analysis_tiny.ipynb  predict.ipynb  train.ipynb
models/V1_2022_11/: analysis.ipynb  hparams.yaml
models/V2_2023_01/: analysis.ipynb
opal/: __init__.py  train.py
opal/beatmaps/: beatmaps.py
opal/collaborative_filtering/: cf_model.py  main.py  predict.py  utils.py
opal/conf/: __init__.py  conf.py  mods.py
opal/datamodule/: db_io.py  ignore_mapping.yaml  score_datamodule.py
opal/download/: data_ppy_sh.py
opal/models/: README.md
opal/module/: __init__.py  neu_mf.py  opal_net.py
opal/nbs/: map_diff_w_replay_error.ipynb  map_diff_w_scores.ipynb  play01.pkl  play02.pkl  play03.pkl  play04.pkl  play05.pkl  player_similarity.ipynb  player_similarity_eval.ipynb  player_similarity_evaluation.ipynb  player_similarity_full.ipynb  player_similarity_hyperparam_tune.ipynb  player_similarity_mse.ipynb  player_similarity_multi.ipynb  player_similarity_partial_eval.ipynb  preprocess.ipynb  (+5 more)
paper/: README.md
rsc/: sample.tar.bz2  sample_files.tar.bz2
scripts/: create_opal_tables.sh  docker-compose.yml  start_docker.sh
src/: .env  pipeline.sh  pyproject.toml  utils.sh
src/evaluate/: Dockerfile  docker-compose.yml  embedding_eval.py  entrypoint.sh  run.sh
src/evaluation/: evaluation.py
src/models/: README.md
src/opal/: conf.py  evaluate.py  score_datamodule.py  svness.py  train.py
src/opal/models/: README.md
src/opal/module/: opal_net.py  opal_net_module.py
src/preprocess/: 1_entrypoint.sh  1_preprocess.sql  2_entrypoint.sh  2_svness.Dockerfile  2_svness.py  3_entrypoint.sh  3_preprocess.sql  4_entrypoint.sh  4_export.sql  README.md  compute_opal_tables_1.sql  compute_opal_tables_2.sql  docker-compose.yml  osu-data-docker.env  run.sh
src/streamlit-app/: Main.py  requirements.txt
src/streamlit-app/pages/: 1_Info.py
src/train/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.sh
src/train/opal/: conf.py  score_datamodule.py  train.py
src/train/opal/module/: __init__.py  opal_net.py  opal_net_module.py
src/upload/: Dockerfile  docker-compose.yml
tests/: test_inference.py
(+99 files in other folders)
