[tool.poetry]
name = "opal"
version = "0.1.0"
description = "osu!mania score estimation through Collaborative Filtering"
authors = ["Eve-ning <dev_evening@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
pytorch-lightning = "^1.9.1"
osu-data-csv = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"