[tool.poetry]
name = "opal-net"
version = "0.1.0"
description = "osu!mania score prediction through AI collaborative filtering"
authors = ["Evening"]
license = "MIT"
readme = "README.md"
exclude = [
    "opal/models/V2_2023_01", # Old Model
    "**/*.ipynb",
    "**/*.png"
]
packages = [{include = "opal"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
torch = "^2.0.0"
pytorch-lightning = "^2.0.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
google-cloud-firestore = "^2.11.1"
streamlit = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

