[tool.poetry]
name = "opal-net"
version = "2023.8.4a"
description = "osu!mania score prediction through AI collaborative filtering"
authors = ["Evening"]
license = "MIT"
readme = "README.md"
include = ["opal/models/V4/*"]
exclude = ["**/*.png"]
packages = [
    {include = "opal"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
torch = "^2.0.1"
pytorch-lightning = "^2.0.7"
pandas = "^2.0.3"
numpy = "^1.25.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
google-cloud-firestore = "^2.11.1"
streamlit = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

